--- a/style/styl.css
+++ b/style/styl.css
@@ -23,9 +23,12 @@ body{
     height: 20px;
     border-radius: 50%;
     background-color: lightgray;
-    position: absolute;
+    z-index: 999;
 }
 .second , .minute , .hour{
+    position: absolute;
+    width: 300px;
+    height: 300px;
     display: flex;
     justify-content: center;
 }
@@ -38,5 +41,12 @@ body{
     width: 3px;
     height: 170px;
     border: 2px solid greenyellow;
+    border-radius: 5px;
+}
+.minute::before{
+    content: '';
+    width: 3px;
+    height: 140px;
+    border: 2px solid red;
     border-radius: 5px;
 }
