--- a/style/styl.css
+++ b/style/styl.css
@@ -1,3 +1,8 @@
+/* add persian font */
+@font-face {
+    font-family: fa;
+    src: url(../fonts/Dirooz.ttf) format('truetype');
+}
 /* reset code */
 *{margin: 0; padding: 0; box-sizing: border-box;}
 body{
@@ -6,6 +11,7 @@ body{
     align-items: center;
     justify-content: center;
     background-color: rgb(59, 59, 59);
+    font-family: fa;
 }
 .clock{
     position: relative;
@@ -56,4 +62,16 @@ body{
     height: 140px;
     border: 2px solid rgb(196, 196, 196);
     border-radius: 5px;
+}
+.conainer{
+    display: flex;
+    justify-content: center;
+}
+.hclock{
+    color: white;
+    font-size: 40px;
+    border: 1px solid rgba(2, 162, 255, 0.623);
+    padding: 4px 10px;
+    border-radius: 5px;
+    margin: 0 10px;
 }
